[project]
name = "tokenhub-server"
version = "0.1.0"
description = "TokenHub exchange server"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
include = ["server*"]

[project.scripts]
tokenhub-server = "server.main:main"
